// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Media Share Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-social-media-share"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <div
          class="ecl-popover"
          data-ecl-auto-init="Popover"
        >
          <a
            aria-controls="social-media-share-popover"
            aria-expanded="false"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle ecl-social-media-share__link"
            data-ecl-popover-toggle=""
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#share"
              />
            </svg>
            <span
              class="ecl-link__label"
            >
              Other social networks
            </span>
          </a>
          <div
            class="ecl-popover__container"
            hidden=""
            id="social-media-share-popover"
          >
            <div
              class="ecl-popover__content"
            >
              Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
      Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Share Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-social-media-share custom-class custom-class--test"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <div
          class="ecl-popover"
          data-ecl-auto-init="Popover"
        >
          <a
            aria-controls="social-media-share-popover"
            aria-expanded="false"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle ecl-social-media-share__link"
            data-ecl-popover-toggle=""
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#share"
              />
            </svg>
            <span
              class="ecl-link__label"
            >
              Other social networks
            </span>
          </a>
          <div
            class="ecl-popover__container"
            hidden=""
            id="social-media-share-popover"
          >
            <div
              class="ecl-popover__content"
            >
              Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
      Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Share Default view renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-share"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <div
          class="ecl-popover"
          data-ecl-auto-init="Popover"
        >
          <a
            aria-controls="social-media-share-popover"
            aria-expanded="false"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle ecl-social-media-share__link"
            data-ecl-popover-toggle=""
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-share__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#share"
              />
            </svg>
            <span
              class="ecl-link__label"
            >
              Other social networks
            </span>
          </a>
          <div
            class="ecl-popover__container"
            hidden=""
            id="social-media-share-popover"
          >
            <div
              class="ecl-popover__content"
            >
              Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
      Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</jest>
`;
